test/sema/generic-arg-infer-conflict-range.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

void f(uint a) {
    // CHECK: [[@LINE+2]]:22: error: no matching constructor for 'Range' with argument list of type '(float, uint)'
    // CHECK-COUNT-2: note: candidate function:
    for (var i in 0.0..a) {}
}
